# emacs-python-nix-template

./: .dir-locals.el  .envrc  .gitignore  Pipfile  README.md  devenv.nix  flake.nix  main.py  pyproject.toml
